--- a/main.css
+++ b/main.css
@@ -51,24 +51,175 @@ span {
 .container-header {
   position: relative;
 }
-
+/*  */
 .paper {
   position: absolute;
   top: -100px;
   left: 100px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.7s ease;
 }
 
+.paper:hover {
+  transform: scale(1.05);
+}
+
+.paper:active {
+  transform: scale(1.5);
+}
+/* ! */
 .rock {
   position: absolute;
   top: -100px;
   left: 400px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.7s ease;
 }
 
+.rock:hover {
+  transform: scale(1.05);
+}
+
+.rock:active {
+  transform: scale(1.5);
+}
+/* ? */
 .scissors {
   position: absolute;
   top: 120px;
   left: 250px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.7s ease;
 }
+
+.scissors:hover {
+  transform: scale(1.05);
+}
+
+.scissors:active {
+  transform: scale(1.5);
+}
+
+/*  */
+button {
+  background-color: transparent;
+  border: none;
+}
+
+#rules {
+  position: relative;
+  left: 990px;
+  top: -50px;
+  transition: background-color 0.3s ease, transform 0.9s ease;
+  cursor: pointer;
+}
+
+#rules:hover {
+  transform: scale(1.15);
+}
+
+#rules:active {
+  transform: scale(1.5);
+}
+
+main {
+  position: relative;
+}
+
+/*! rules button */
+
+.hidden-nav {
+  width: 400px;
+  height: 415px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  margin: 0 auto;
+  position: absolute;
+  top: -180px;
+  left: 150px;
+  z-index: 100;
+  opacity: 1;
+  visibility: visible;
+  transition: 0.5s;
+}
+
+.rules-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 28px;
+  padding: 32px;
+}
+
+.icons-box {
+  padding: 0px 46px 32px 49px;
+  width: 305px;
+  height: 271px;
+  top: -50px;
+}
+
+.header-rules {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-rules {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-rules {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.beats-left {
+  position: absolute;
+  top: 140px;
+  left: 185px;
+}
+
+.hidden-nav.show-nav {
+  opacity: 1;
+  visibility: visible;
+}
+
+/*  */
+
+.beats-down {
+  position: absolute;
+  left: 100px;
+  top: 250px;
+}
+
+.arrow-down {
+  position: absolute;
+  left: 135px;
+  top: 215px;
+}
+
+.arrow-up {
+  position: absolute;
+  left: 215px;
+  top: 215px;
+}
+
+.paperr {
+  position: absolute;
+  top: 270px;
+  left: 140px;
+}
+
+.beats-up {
+  position: absolute;
+  left: 250px;
+  top: 250px;
+}
+
+/*  */
 
 @media screen and (max-width: 412px) {
   .box-header {
