--- a/main.css
+++ b/main.css
@@ -140,7 +140,7 @@ main {
   z-index: 100;
   opacity: 0;
   visibility: hidden;
-  transition: 0.5s;
+  transition: 1s;
 }
 
 .rules-box {
@@ -269,5 +269,13 @@ main {
     top: 110px;
     left: 110px;
     width: 80px;
+  }
+
+  .rules-btn {
+    position: relative;
+    left: 250px;
+    top: 250px;
+    transition: background-color 0.3s ease, transform 0.9s ease;
+    cursor: pointer;
   }
 }
