--- a/main.css
+++ b/main.css
@@ -274,8 +274,9 @@ main {
   .rules-btn {
     position: relative;
     left: 250px;
-    top: 250px;
+    top: 230px;
     transition: background-color 0.3s ease, transform 0.9s ease;
     cursor: pointer;
+    width: 50px;
   }
 }
