--- a/main.css
+++ b/main.css
@@ -7,7 +7,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   overflow-x: hidden;
-  height: 673px;
+  overflow-y: hidden;
+  height: 715px;
 }
 
 span {
@@ -33,6 +34,7 @@ span {
   margin-top: 48px;
   margin-bottom: 163.5px;
   width: 700px;
+  margin: 0 auto;
 }
 
 .container-header {
@@ -197,6 +199,10 @@ main {
   justify-content: center;
 }
 
+.img-box {
+  margin-top: 200px;
+}
+
 /*  */
 
 .img-box.nan-box {
@@ -214,8 +220,7 @@ main {
   display: none;
   align-items: center;
   justify-content: space-between;
-  margin-right: auto;
-  margin-left: auto;
+  margin-top: 150px;
 }
 
 .comparitionss.blok {
@@ -280,16 +285,67 @@ main {
   }
 }
 
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 700px) {
+  .back {
+    margin-bottom: 0px;
+    width: 220px;
+  }
+
+  .paper {
+    position: absolute;
+    top: -50px;
+    left: 180px;
+    width: 130px;
+  }
+
+  .rock {
+    position: absolute;
+    top: -50px;
+    left: 360px;
+    width: 130px;
+  }
+
+  .scissors {
+    position: absolute;
+    top: 110px;
+    left: 280px;
+    width: 130px;
+  }
+
   .rules-btn {
-    left: 560px;
-    top: 300px;
+    top: 210px;
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 660px) {
   .rules-btn {
-    left: 500px;
+    left: 550px;
+  }
+
+  .back {
+    margin-bottom: 0px;
+    width: 220px;
+  }
+
+  .paper {
+    position: absolute;
+    top: -50px;
+    left: 130px;
+    width: 130px;
+  }
+
+  .rock {
+    position: absolute;
+    top: -50px;
+    left: 290px;
+    width: 130px;
+  }
+
+  .scissors {
+    position: absolute;
+    top: 110px;
+    left: 230px;
+    width: 130px;
   }
 
   .box-header {
@@ -326,12 +382,48 @@ main {
 
   .rules-btn {
     position: absolute;
-    left: 470px;
-    top: 290px;
+    left: 420px;
+    /* top: 290px; */
     transition: background-color 0.3s ease, transform 0.9s ease;
     cursor: pointer;
     width: 50px;
   }
+}
+
+@media screen and (max-width: 570px) {
+  body {
+    height: 605px;
+  }
+  .ai {
+    width: 100px;
+  }
+
+  .human {
+    width: 100px;
+  }
+
+  .box-header {
+    width: 400px;
+  }
+
+  .rules-btn {
+    top: 210px;
+  }
+
+  .rules-menu {
+    width: 50px;
+  }
+
+  .hidden-nav {
+    max-width: 580px;
+    height: 740px;
+    position: absolute;
+    top: -360px;
+    left: -5px;
+  }
+}
+
+@media screen and (max-width: 530px) {
 }
 
 @media screen and (max-width: 500px) {
@@ -418,6 +510,14 @@ main {
 
   .rules-menu {
     width: 40px;
+    position: relative;
+    top: 47px;
+    left: 20px;
+  }
+
+  .relus-icon {
+    width: 110px;
+    margin: 0 auto;
   }
 
   .rules-btn {
@@ -429,12 +529,28 @@ main {
     width: 50px;
   }
 
+  .rules-box {
+    margin-top: 20px;
+    position: relative;
+  }
+
   .hidden-nav {
-    width: 465px;
+    width: 400px;
     height: 780px;
     position: absolute;
     top: -312px;
     left: -55px;
+  }
+
+  .qoida-img {
+    width: 280px;
+    margin-top: 130px;
+  }
+
+  .exit-img {
+    position: absolute;
+    top: 640px;
+    left: 300px;
   }
 }
 
@@ -453,6 +569,10 @@ main {
     position: absolute;
     top: -312px;
     left: -55px;
+  }
+
+  .rules-btn {
+    left: 200px;
   }
 }
 
@@ -473,11 +593,26 @@ main {
     top: -312px;
     left: -30px;
   }
+
+  .exit-img {
+    top: 570px;
+    left: 270px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .hidden-nav {
+    width: 340px;
+    height: 740px;
+    position: absolute;
+    top: -312px;
+    left: -30px;
+  }
 }
 
 @media screen and (max-width: 320px) {
   .hidden-nav {
-    width: 330px;
+    width: 314px;
     height: 658px;
     position: absolute;
     top: -312px;
@@ -486,7 +621,7 @@ main {
 
   .rules-btn {
     position: relative;
-    left: 210px;
+    left: 190px;
     top: 55px;
     transition: background-color 0.3s ease, transform 0.9s ease;
     cursor: pointer;
