--- a/main.css
+++ b/main.css
@@ -211,9 +211,12 @@ main {
 
 /*  */
 
-.comparitionss {
+.block-box {
   max-width: 700px;
   width: 100%;
+}
+
+.comparitionss {
   margin-top: 150px;
   margin: 150px 15px 15px 15px;
   display: none;
@@ -503,6 +506,15 @@ main {
     top: 120px;
     left: 180px;
   }
+
+  .btn-box {
+    top: 80px;
+    left: 120px;
+  }
+
+  .comparitionss {
+    margin: 150px 35px 15px 35px;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -555,6 +567,11 @@ main {
     left: 0px;
     width: 100%;
   }
+
+  .btn-box {
+    top: 80px;
+    left: 95px;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -583,6 +600,20 @@ main {
 @media screen and (max-width: 435px) {
   .box-header {
     width: 320px;
+    margin-bottom: 140px;
+  }
+
+  .btn-box {
+    top: 120px;
+    left: 80px;
+  }
+
+  .comparitionss {
+    margin: 115px 20px 15px 20px;
+  }
+
+  .hidden-nav {
+    top: -360px;
   }
 }
 
@@ -595,13 +626,13 @@ main {
     padding: 24px 23px;
     margin-top: 32px;
     width: 200px;
-    margin-bottom: 105px;
+    margin-bottom: 0px;
   }
 
   .container-header {
     width: 300px;
     box-sizing: border-box;
-    padding: 32px;
+    padding: 0px;
   }
 
   .logo {
@@ -658,8 +689,8 @@ main {
 
   .rules-btn {
     position: relative;
-    left: 245px;
-    top: 25px;
+    left: 260px;
+    top: 230px;
     transition: background-color 0.3s ease, transform 0.9s ease;
     cursor: pointer;
     width: 50px;
@@ -672,9 +703,9 @@ main {
 
   .hidden-nav {
     width: 400px;
-    height: 780px;
+    height: 640px;
     position: absolute;
-    top: -312px;
+    top: -225px;
     left: -50px;
   }
 
@@ -688,29 +719,39 @@ main {
     top: 560px;
     left: 350px;
   }
+
+  .btn-box {
+    top: 140px;
+    left: 20px;
+    width: 200px;
+  }
+
+  .comparitionss {
+    margin: 80px 20px 15px 20px;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .hidden-nav {
-    width: 390px;
-    height: 638px;
+    width: 380px;
+    height: 640px;
     position: absolute;
-    top: -312px;
+    top: -225px;
     left: -50px;
   }
 
   .rules-btn {
-    left: 200px;
+    left: 250px;
   }
 }
 
 @media screen and (max-width: 370px) {
   .hidden-nav {
-    width: 365px;
+    width: 350px;
     height: 640px;
     position: absolute;
-    top: -312px;
-    left: -33px;
+    top: -225px;
+    left: -20px;
   }
 
   .exit-img {
@@ -722,38 +763,36 @@ main {
 
 @media screen and (max-width: 360px) {
   .hidden-nav {
-    width: 350px;
+    width: 340px;
+    height: 640px;
+    position: absolute;
+    top: -225px;
+    left: -30px;
   }
-
-  /* .exit-img {
-    top: 570px;
-    left: 270px;
-  } */
 }
 
 @media screen and (max-width: 330px) {
   .hidden-nav {
-    width: 340px;
-    height: 740px;
+    width: 320px;
+    height: 640px;
     position: absolute;
-    top: -312px;
-    left: -30px;
+    top: -225px;
+    left: -10px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .hidden-nav {
-    width: 314px;
-    height: 658px;
+    width: 310px;
+    height: 640px;
     position: absolute;
-    top: -312px;
-    left: -15px;
+    top: -225px;
+    left: -8px;
   }
 
   .rules-btn {
     position: relative;
-    left: 190px;
-    top: 55px;
+    left: 220px;
     transition: background-color 0.3s ease, transform 0.9s ease;
     cursor: pointer;
   }
@@ -766,10 +805,10 @@ main {
 @media screen and (max-width: 310px) {
   .hidden-nav {
     width: 300px;
-    height: 635px;
+    height: 640px;
     position: absolute;
-    top: -312px;
-    left: -7px;
+    top: -225px;
+    left: -8px;
   }
 
   .exit-img {
